[package]
name = "oled"
version = "0.1.0"
authors = ["dominick <d.caponi1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp32c3-hal = { version = "0.2.0", features = ["ufmt"] } 
esp-println = { version = "0.3.1", features = ["esp32c3"] }
ws2812-spi = "0.4.0"
smart-leds = "0.3.0"
riscv-rt = "0.8"
panic-halt = "0.2"
fugit = "0.3.6"
embedded-hal = { version = "0.2", features = ["unproven"] }